css/style.css
/* ... */
.chapter p:last-of-type {
  margin-bottom: 9em;
}
/* end individual volume pages */



/* button styles */
.btn {
  display: inline-block;
  text-align: center;
  padding: 1.5em 6em;
  text-shadow: initial;
  border-radius: 48px;
  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
  transition: box-shadow 0.15s ease-in-out;
  margin: auto;
}

.btn:hover {
  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
  transition: box-shadow 0.15s ease-in-out;
}

/* media query for site nav large desktop */
@media
only screen and (-webkit-min-device-pixel-ratio: 2)      and (min-width: 1300px),
only screen and (   min--moz-device-pixel-ratio: 2)      and (min-width: 1300px),
only screen and (     -o-min-device-pixel-ratio: 2/1)    and (min-width: 1300px),
only screen and (        min-device-pixel-ratio: 2)      and (min-width: 1300px),
only screen and (                min-resolution: 192dpi) and (min-width: 1300px),
only screen and (                min-resolution: 2dppx)  and (min-width: 1300px) { 

  /* Large screen, retina, stuff to override above media query */
  .hero-image--home {
    background-image: url("../images/homepage/DialecticJumbotron@2x.jpg");  
  }
  .hero-image--volume1 {
    background-image: url("../images/reading-images/heroImageVolume1@2x.jpg");    
  }
  .hero-image--volume2 {
    background-image: url("../images/reading-images/heroImageVolume2@2x.jpg");    
  }
}

/* media query for site nav tablet */
@media (max-width: 1024px) {

  /* text styles */
  body {
    font-size: 1.125em; /* 18 is the new context */
  }

  h2 {
    font-size: 1.5em;
  }

  h4 {
    font-size: 1em;
  }
  .display {
    font-size: 5em;
    padding-left: 0;
    letter-spacing: initial;
    line-height: .6;
    padding-left: 0;
  }

  .display-subtext {
    font-size: 1em;
  }

  .btn {
    font-size: .9em;
  }

  .volume-title {
    font-size: 2.75em;
  }
  /* end text styles */
  

  /* header */
  .hero {
    position: static;
    background-attachment: scroll;    
    background-position: left;
    background-repeat: no-repeat;
    min-width: 100%;
    min-height: 100%;
    z-index: -1;
  }
  

  /* navigation styles */
  /* menu toggle for nav dropdowns */
  .brand {
    font-size: 1.7777777778em;
  }
  .menu-toggle {
    padding: .905em 1em;
    position: absolute;
    right: 2.1875em;
    top: 2em;
    cursor: pointer;
  }

  .hamburger,
  .hamburger::before,
  .hamburger::after {
    content: '';
    display: block;
    height: 2px;
    width: 1.75em;
    background: #EBEBEB;
    transition: all ease-in-out 200ms;
  }

  .hamburger::before {
    transform: translateY(-8px);
  }

  .hamburger::after {
    transform: translateY(6px);
  }

  .open .hamburger {
    transform: rotate(135deg);
  }

  .open .hamburger::before {
    transform: rotate(270deg);
  }

  .open .hamburger::after {
    opacity: 0;    
  }
  /*end menu toggle */

  /* .sub-nav {
    display: block;
    position: absolute;
  } */

  .site-nav {
    position: absolute;
    top: 70%;
    right: 0%;
    background: #393838;
    float: right;
    height: 0;
    overflow: hidden;
  }

  .site-nav--open {
    height: auto;
  }

  .site-nav a:hover,
  .site-nav a:focus {
    background-color: #D1B471;
    color: #4B4B4B;
  }

  header::after {
    content: '';
    clear: both;
    display: block;
  }

  .site-nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  .site-nav li {
    display: block;
    border-bottom: 1px solid #575766;
  }

  .site-nav a {
    text-decoration: none;
    display: block;
    padding: 1em 6em;
    font-weight: 400;
  }

  .site-nav li,
  .site-nav a {
    font-size: .95em; /*16/21*/
  }
  .site-nav li:last-child {
    border-bottom: none;
  }

  .sub-nav {
    position: static;
    top:100%;
    background-color: #393838;
    height: auto;
  }

  .sub-nav li {
    display: block;
    border-bottom: none;
  }

  .sub-nav a {
    padding-top: 1em;
    padding-bottom: 1em;
    padding-left: 9em;
  }

  .sub-nav a:first-of-type {
    border-top: 1px solid #575766;
  }
  /* end navigation styles */

  /* social */
  .social {
    position: fixed;
    left: 1.8em;
    top: 40%;
    font-size: 1.25em;  
  }
  /* end social */

  .background {
    padding-bottom: 0;
    /* margin-bottom: 4.25em; */
  }
  
  /* content sections */
  .main {
    width: 100%;
    max-width: 1024px;
    margin: 0 auto;
    background-color: #FFFFFF;
  }

  

  .content-section h2 {
    margin-top: 0em;
    margin-bottom: .5em;
    text-align: center;
  }

  .content-section h4 {
    margin-top:1em;    
    margin-bottom: 1em;
    text-align: center;
  }

  .content-right,
  .content-left {
    width: 60%; 
    float: none;
    margin: auto;
  }

  .content-left p,
  .content-right p {
    margin-bottom: 2.5em;
  }

  .volume-cta {
    text-align: center;
  }

  #about p:first-of-type {
    margin-top: 1em;
  }
  /* end content sections */
  
  /* individual volume pages */

  .page-wrapper {
    width: 90%; /* 970/1440 */
    margin: auto;
    /* margin-top: 2.25em; 36/16 */
    position: relative;
    top: -30.54420922%; /* 630/803 */  
    font-size: 1em; /* 21/16 */
    z-index: 0;

  }
  
  .page {
    padding: 8em 3em 0 3em;    
  }

  .page p, h3 {
    margin: 0 4em; /* */
    margin-bottom: 1em;
  }

  /* end individual volume pages */

}
/* ... */

